vfpl_parser/src/snapshots/vfpl_parser__test__literal_call_expr.snap
---
source: vfpl_parser/src/test.rs
expression: parsed

---
Ok(
    Literal(
        Literal {
            span: Span {
                start: 0,
                end: 0,
            },
            kind: String(
                "string",
            ),
        },
    ),
)
