vfpl_parser/src/snapshots/vfpl_parser__test__multiple_body_statements.snap
---
source: vfpl_parser/src/test.rs
expression: parsed

---
Ok(
    Body {
        span: Span {
            start: 0,
            end: 0,
        },
        stmts: [
            Expr(
                ArithmeticOp(
                    ArithmeticOp {
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                        lhs: Literal(
                            Literal {
                                span: Span {
                                    start: 0,
                                    end: 0,
                                },
                                kind: Int(
                                    5,
                                ),
                            },
                        ),
                        rhs: Literal(
                            Literal {
                                span: Span {
                                    start: 0,
                                    end: 0,
                                },
                                kind: Int(
                                    6,
                                ),
                            },
                        ),
                        kind: Add,
                    },
                ),
            ),
            Terminate(
                Terminate {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                },
            ),
        ],
    },
)
