vfpl_parser/src/snapshots/vfpl_parser__test__nested_add_number.snap
---
source: vfpl_parser/src/test.rs
expression: parsed

---
Ok(
    ArithmeticOp(
        ArithmeticOp {
            span: Span {
                start: 0,
                end: 0,
            },
            lhs: Literal(
                Literal {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    kind: Int(
                        5,
                    ),
                },
            ),
            rhs: ArithmeticOp(
                ArithmeticOp {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    lhs: Literal(
                        Literal {
                            span: Span {
                                start: 0,
                                end: 0,
                            },
                            kind: Int(
                                6,
                            ),
                        },
                    ),
                    rhs: Literal(
                        Literal {
                            span: Span {
                                start: 0,
                                end: 0,
                            },
                            kind: Int(
                                7,
                            ),
                        },
                    ),
                    kind: Add,
                },
            ),
            kind: Add,
        },
    ),
)
