vfpl_parser/src/snapshots/vfpl_parser__test__nullable_ty.snap
---
source: vfpl_parser/src/test.rs
expression: parsed

---
[
    Ok(
        Ty {
            span: Span {
                start: 0,
                end: 0,
            },
            kind: Absent,
        },
    ),
    Ok(
        Ty {
            span: Span {
                start: 0,
                end: 0,
            },
            kind: NoValue,
        },
    ),
    Ok(
        Ty {
            span: Span {
                start: 0,
                end: 0,
            },
            kind: Null,
        },
    ),
    Ok(
        Ty {
            span: Span {
                start: 0,
                end: 0,
            },
            kind: Undefined,
        },
    ),
]
